CollectionLock acquisition in shard_filtering_metadata_refresh.cpp can cause server to terminate on stepdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.3, 4.1.3
    • Affects Version/s: 4.0.0, 4.1.1
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • v4.0
    • Sharding 2018-08-13, Sharding 2018-08-27, Sharding 2018-09-10
    • 25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The CollectionLock acquisition in onShardVersionMismatch() can throw (for example, due to interrupt on stepdown), but it's called from the catch block in service_entry_point_common.cpp (and there is no try/catch above this point), so if it throws the exception will terminate the server.

      We could either put an UninterruptibleLockGuard or try/catch around the lock acquisition; it may be better to put a try/catch, since we probably don't want to block stepdown for this.

            Assignee:
            Esha Maharishi (Inactive)
            Reporter:
            Esha Maharishi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: